--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Blog info
-blog_name: Forsigner
-slogan: Find the bug of the world
-url: http://www.forsigner.com
+blog_name: Skybcyang
+slogan: Programming is a part of my life.
+url: https://skybcyang.com/
 
 # Set avatar (Absolute url and relative url)
 avatar: /images/avatar.jpg
@@ -10,20 +10,23 @@ avatar: /images/avatar.jpg
 favicon: /favicon.ico
 
 # For seo
-keywords: forsigner,前端,设计,Hexo主题,前端开发,用户体验,设计,frontend,design,nodejs,JavaScript
+keywords: skybcyang,后端,C++,架构设计,重构,用户体验,设计
 
 home_nav:
   - name: Blog
     url: /archives
     target_blank: false #不在新页面打开
+  - name: Talk
+    url: /talk/
+    target_blank: false
+  - name: Profile
+    url: /about/
+    target_blank: false
   - name: Project
     url: /project/
-    target_blank: true #在新页面打开
+    target_blank: false
   - name: Github
-    url: https://github.com/forsigner
-    target_blank: true
-  - name: Twitter
-    url: https://twitter.com/forsigner
+    url: https://github.com/skybcyang
     target_blank: true
 
 # config page nav
@@ -37,20 +40,14 @@ page_nav:
   - name: 标签
     url: /tag/
     target_blank: false
-  - name: 友链
-    url: /link/
-    target_blank: false
-  - name: 关于
-    url: /about/
-    target_blank: false
-  - name: RSS
-    url: /atom.xml
-    target_blank: true # 在新页面打开
+  # - name: 友链
+  #   url: /link/
+  #   target_blank: false
   - name: 搜索
     url: /search/
     target_blank: false # 在新页面打开
 
-page_nav_style: CIRCLE  # CIRCLE|ROUND_RECT
+page_nav_style: ROUND_RECT  # CIRCLE|ROUND_RECT
 
 # 面包屑
 breadcrumb:
@@ -59,7 +56,7 @@ breadcrumb:
 # 盒子
 toolbox:
   isShow: true # true|fase
-  text: 盒子
+  text: ROOT
 
 search_slogan:
   isShow: true # true|fase
@@ -67,7 +64,7 @@ search_slogan:
 
 link_slogan:
   isShow: true # true|fase
-  text: 交换友链可以邮件 forsigner@gmail.com
+  text: 交换友链可以邮件 helloskybc@gmail.com
 
 
 # set backtop show or hide
@@ -83,7 +80,7 @@ backtop:
 donation:
   show: true
   btn_text: 支持一下
-  tip: 扫一扫，支持forsigner
+  tip: 扫一扫，支持skybcyang
   items:
     - type: 微信
       text: 微信扫一扫
@@ -145,11 +142,11 @@ changyan:
 # gitalk评论组件，把下面的配置换成你的，官方文档: https://gitalk.github.io/
 gitalk:
   enable: true # 如果使用 gitalk，请设置改之为true
-  clientID: 277317290454635afa73
-  clientSecret: 78223c859304da5e8d71bfce136d436c6ff95c37
-  repo: blog-comment
-  owner: forsigner
-  admin: forsigner
+  clientID: 11f74a60d7351bb18175
+  clientSecret: eb8d06f4104c7de20325d416fda887ded91c2ab7
+  repo: GitTalk
+  owner: skybcyang
+  admin: skybcyang
 
 
 # gitment comment service
@@ -194,52 +191,32 @@ about:
   - type: me
     icon: icon-user
     text_value:
-    - "Scut，1991，Spring."
-    - "喜欢设计，擅长编程，喜欢睡懒觉."
-    - "前端开发工程师，常用 HTML / CSS / JavaScript."
+    - "Tjsu，1997，Summer."
+    - "Intermediate Software Engineer."
+    - "Interests: CS, OO, Design, Programm, Photography."
   - type: Github
     icon: icon-github
     text_key: Github
-    text_value: "@forsigner"
-    text_value_url: https://github.com/forsigner
-  - type: weibo
-    icon: icon-weibo
-    text_key: 微博
-    text_value: "@forsigner"
-    text_value_url: http://weibo.com/u/1847075964
+    text_value: "@skybcyang"
+    text_value_url: https://github.com/skybcyang
+  - type: LeetCode
+    icon: icon-code
+    text_key: LeetCode
+    text_value: "@skybcyang"
+    text_value_url: https://leetcode-cn.com/u/skybcyang/
   - type: mail
     icon: icon-mail
     text_key: Gmail
-    text_value: "forsigner@gmail.com"
+    text_value: "helloskybc@gmail.com"
   - type: location
     icon: icon-location
-    text_value: 珠海
+    text_value: Shanghai
 
 link:
-  - name: 织网
-    info: 身体和灵魂，总有一个在路上
-    url: http://zheng-ji.info/
-    avatar: https://avatars3.githubusercontent.com/u/1414745?v=3&s=100
-  - name: Dongyado
-    info: 生命不止，折腾不息
-    url: http://dongyado.com/
-    avatar: https://avatars0.githubusercontent.com/u/6274940?v=3&s=100
-  - name: OrangeCoder
-    info: android ffmpeg nodejs gradle
-    url: http://orangecoder.com/
-    avatar: https://avatars0.githubusercontent.com/u/2263785?v=3&s=100
-  - name: EverET
-    info: 好记性不如烂笔头
-    url: http://everet.org/about-me/
-    avatar: https://avatars1.githubusercontent.com/u/1559563?v=3&s=100
-  - name: 题叶
-    info: FP, GUI, Writing
-    url: http://tiye.me/
-    avatar: https://avatars2.githubusercontent.com/u/449224?v=3&s=100
-  - name: McChen
-    info: Stay Hungry, Stay Foolish
-    url: https://chenjiahao.xyz
-    avatar: https://avatars0.githubusercontent.com/u/8033333?v=3&s=100
+  # - name: 织网
+  #   info: 身体和灵魂，总有一个在路上
+  #   url: http://zheng-ji.info/
+  #   avatar: https://avatars3.githubusercontent.com/u/1414745?v=3&s=100
 
 
 project:
@@ -247,51 +224,3 @@ project:
     name: fexo
     url: https://github.com/forsigner/fexo
     intro: A minimalist design theme for hexo
-  # - type: company
-  #   name: Fexo
-  #   url: https://github.com/forsigner/fexo
-  #   intro: A minimalist design theme for hexo
-  - type: personal
-    name: beside
-    url: https://github.com/forsigner/beside
-    intro: I need you beside me
-  - type: personal
-    name: web-fontmin
-    url: https://github.com/forsigner/web-fontmin
-    intro: 字体子集化，在线提取你需要的字体
-  - type: personal
-    name: magic-check
-    url: https://github.com/forsigner/magic-check
-    intro: Beautify Radio and Checkbox with pure CSS
-  - type: personal
-    name: nice-bar
-    url: https://github.com/forsigner/nice-bar
-    intro: A nice and lightweight scrollbar
-  - type: personal
-    name: angular-nice-bar
-    url: https://github.com/forsigner/angular-nice-bar
-    intro: A nice and lightweight scrollbar in Angular
-  - type: personal
-    name: fo-popover
-    url: https://github.com/forsigner/fo-popover
-    intro: A nice popover for Angular
-  - type: personal
-    name: fo-tooltip
-    url: A nice tooltip for Angular
-    intro: https://github.com/forsigner/fo-tooltip
-  - type: personal
-    name: fo-modal
-    url: https://github.com/forsigner/fo-modal
-    intro: A nice modal for Angular
-  - type: personal
-    name: mocer
-    url: https://github.com/forsigner/mocer
-    intro: Setup a mock server easily
-  - type: personal
-    name: node-pngdefry
-    url: https://github.com/forsigner/node-pngdefry
-    intro: Repairing iPhone fried PNGs using Node.js
-  - type: personal
-    name: ng-simditor
-    url: https://github.com/forsigner/ng-simditor
-    intro: Angular directive for simditor
